# gaibe

./: .gitignore  README.md
docs/: OnUsingDot.txt  PIL.dot  Threads.dot  UMLDiagrams.dot  UMLTemplate.dot
src/: .CMakeLists.txt.swp  CMakeLists.txt
src/Buckland_Chapter2-State Machines/: CMakeLists.txt
src/Buckland_Chapter2-State Machines/WestWorld1/: CMakeLists.txt  Miner.h  main.cpp
src/Buckland_Chapter2-State Machines/WestWorld1/pending_delete/: WestWorld1.sln
src/Buckland_Chapter2-State Machines/WestWorld1/pending_delete/_UpgradeReport_Files/: UpgradeReport.xslt
src/Buckland_Chapter4-SimpleSoccer/: CMakeLists.txt  SoccerPitch.h  main.cpp
src/Common/2D/: Vector2D.h
src/Common/Platform/: Apple.h  Atomics.h  OSX.cpp  OSX.h  Platform.h
src/Common/misc/: Apple.h  Atomics.h  Cgdi.h  ConsoleUtils.h
