cmake_minimum_required (VERSION 3.3)
project (GameAIbyExample)

add_subdirectory("Buckland_Chapter2-State Machines")
add_subdirectory("Buckland_Chapter3-Steering Behaviors")
add_subdirectory("Buckland_Chapter4-SimpleSoccer")
add_subdirectory("Buckland_Chapter5-Pathfinder")
add_subdirectory("Buckland_Chapter6_Scripting_Source")
add_subdirectory("Buckland_Chapter7 to 10_Raven")
add_subdirectory("Common")

